Complete security fix: static resources + actuator endpoints + health details

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,4 +33,4 @@ logging.level.com.baskettecase=DEBUG
 
 # Actuator endpoints for health checks
 management.endpoints.web.exposure.include=health,info
-management.endpoint.health.show-details=when-authorized
+management.endpoint.health.show-details=always
